<resources>
    <string name="app_name">Railway Concession</string>
    <string name="email_hint">Your Email</string>
    <string name="pass_hint">Password</string>
    <string name="signin_hint">Sign in</string>
    <string name="need_a_new_account_hint">Need a new account?</string>
    <string name="button">Button</string>
    <string name="signin_hintt">Sign In</string>
    <string name="loginregister_hint">Do you need to create a new account?</string>
    <string name="email_hintt">Email</string>
    <string name="pass_hintt">Password</string>
    <string name="create_a_new_account">Create a new account?</string>
    <string name="account_settings">Account Settings</string>
    <string name="action_logout_text" />
    <string name="action_logout_textt">Logout</string>
    <string name="email_textview">email_register</string>
    <string name="email_textview_register">Email ID</string>
    <string name="login_btn">Already have an account?</string>
    <string name="Register_button">Register</string>
    <string name="password_Register">Enter Password</string>
    <string name="Confirm_Password">Re-Enter Password</string>
    <string name="register_confirmpassword">Confirm Password</string>
    <string name="signup_btn">Sign Up</string>
    <string name="profile_name">Full Name</string>
    <string name="profile_SAP">SAP ID</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone">Mobile Number</string>
    <string name="profile_from">From</string>
    <string name="profile_to">TO</string>
    <string name="profile_dob">Date Of Birth</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_pic">ProfilePicture</string>
    <string name="profile_save">SAVE</string>
    <string name="profile_Reset">RESET</string>
    <string name="save_button">SAVE</string>
    <string name="reset_button">RESET</string>
    <string name="title_activity_tpfraggment">TPFraggment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reg_SAP">SAP ID</string>
    <string name="reg_mobile">Mobile Number</string>
    <string name="reg_name">Full Name</string>
    <string name="reg_dob">Date Of Birth</string>
    <string name="reg_gender">Gender</string>
    <string name="reg_gender_male">Male</string>
    <string name="reg_gender_female">Female</string>
    <string name="name">Name:</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email:</string>
    <string name="password_reset_email_success">Password Reset Email Sent.</string>
    <string name="password_reset_email_failure">Error in sending email</string>
    <string name="input_error_email">Email cannot be empty</string>
    <string name="Enter_Email">Enter Email</string>
    <string name="Editprofile">EditProfile</string>
    <string name="Edit_profile">Edit Profile</string>
    <string name="profile_updated_success">Profile updated successfully</string>
    <string name="profile_updated_error">Error occurred</string>
    <string name="input_error_phone">Enter mobile number</string>
    <string name="input_error_phone_invalid">Enter a valid mobile number</string>
    <string name="input_error_SAPID_invalid">Enter a valid SAP number</string>
    <string name="input_error_SAPID">Enter a SAP number</string>
    <string name="description">password toggle</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="textview">TextView</string>
    <string name="broadcast_updated_error">Update Error</string>
    <string name="broadcast_updated_success">Successfully updated</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
