<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TogglePassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TogglePassword1"
        app:passwordToggleContentDescription="@string/description"
        app:passwordToggleDrawable="@drawable/ic_remove_red_eye_black_24dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/register_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Reenter Password"
            android:layout_below="@+id/TogglePassword1"
            android:layout_marginTop="10dp"
            android:hint="@string/register_confirmpassword"
            android:textCursorDrawable="@color/colorPrimaryDark"
            android:inputType="textPassword"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>


    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_Name"
        android:textCursorDrawable="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:hint="@string/email_hintt"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        tools:targetApi="o" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TogglePassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email"
        app:passwordToggleContentDescription="@string/description"
        app:passwordToggleDrawable="@drawable/ic_remove_red_eye_black_24dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@color/colorPrimaryDark"
            android:layout_below="@+id/register_email"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:hint="@string/pass_hintt"
            android:inputType="textPassword"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGrp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/signup_btn"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/register_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_btn"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_btn"
        android:textColor="@color/colorAccent" />


    <EditText
        android:id="@+id/reg_SAPID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_mobile"
        android:textCursorDrawable="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:autofillHints="SAP ID"
        android:hint="@string/reg_SAP"
        android:inputType="number"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/reg_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@color/colorPrimaryDark"
        android:autofillHints="Mobile Number"
        android:layout_below="@+id/TogglePassword2"
        android:layout_marginTop="10dp"
        android:hint="@string/reg_mobile"
        android:inputType="phone"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/reg_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="Name"
        android:textCursorDrawable="@color/colorPrimaryDark"
        android:hint="@string/reg_name"
        android:inputType="textPersonName"
        tools:targetApi="o" />


    <TextView
        android:id="@+id/reg_dob"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/reg_SAPID"
        android:layout_marginTop="10dp"
        android:autofillHints="DOB"
        android:ems="10"
        android:hint="@string/reg_dob"
        android:textSize="22dp"
        android:textCursorDrawable="@color/colorPrimaryDark"
        tools:targetApi="o" />

    <RadioGroup
        android:id="@+id/radioGrp"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_dob"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="1dp">

        <RadioButton
            android:id="@+id/r1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_gender_male"
            android:textSize="18sp"
            android:buttonTint="@color/colorPrimaryDark"
            tools:targetApi="o" />

        <RadioButton
            android:id="@+id/r2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r1"
            android:onClick="checkButton"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/reg_gender_female"
            android:textSize="18sp" />
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender:"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/reg_dob"/>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="202dp"
        android:layout_height="158dp"
        android:layout_alignTop="@+id/TogglePassword2"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp" />

</RelativeLayout>
